# qrcode_generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: display.py  main.py
src/my_package/: constants.py  utils.py
src/my_package/components/: button.py  constants.py  display.py  input_text.py  main_layout.py  main_window.py  qrcode_maker.py
